--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "eslint-config-next": "13.2.4",
     "js-cookie": "^3.0.5",
     "next": "13.2.4",
+    "next-sitemap": "^4.2.3",
     "react": "18.2.0",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "18.2.0",
