--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@hookform/resolvers": "^3.1.0",
     "@popperjs/core": "^2.11.6",
     "bootstrap": "^5.2.3",
     "eslint": "8.36.0",
@@ -22,6 +21,7 @@
     "react-spinners": "^0.13.8",
     "react-use": "^17.4.0",
     "sass": "^1.59.3",
+    "sharp": "^0.33.5",
     "slick-carousel": "^1.8.1",
     "swiper": "^9.1.1",
     "yup": "^1.1.1"
